# pygame_spiel

./: .gitignore  LICENSE  MANIFEST.in  README.md  main.py  pyproject.toml  requirements.txt  setup.py
docs/: get_started.md  installation.md
pygame_spiel/: main.py  menu.py  utils.py
pygame_spiel/bots/: dqn.py  dqn_pytorch.py  dummy.py
pygame_spiel/games/: __init__.py  base.py  breakthrough.py  factory.py  settings.py  tic_tac_toe.py
