[project]
name = "pygame_spiel"
version = "1.0.0"
dependencies = [
  "pygame==2.5.0",
  "tensorflow==2.13.0",
  "gdown==4.7.1",
  "pygame-menu==4.4.3",
]
requires-python = ">=3.9.1"
authors = [
  {name = "Giovanni Ortolani", email = "giovorto@pm.me"},
]
maintainers = [
  {name = "Giovanni Ortolani", email = "giovorto@pm.me"}
]
description = "Pygame spiel"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["open_spiel", "pygame"]
classifiers=[
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.optional-dependencies]
spiel = [
  "open-spiel==1.3",
]

[project.urls]
Homepage = "https://github.com/giogix2/pygame_spiel"
Repository = "https://github.com/giogix2/pygame_spiel"

[project.scripts]
pygame_spiel = "pygame_spiel.main:pygame_spiel"